base/infrastructure/tailscale/egress/sh/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sh-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sh.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: sh-egress
          port: 8989
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sh-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sh.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: sh-egress
          port: 8989
  tls:
    secretName: sh-tls
